--- a/arithmetics/build.gradle
+++ b/arithmetics/build.gradle
@@ -1,10 +1,31 @@
 apply plugin: 'com.android.library'
 
+ext{
+    bintrayRepo = 'maven-math'
+    bintrayName = 'equations'
+
+    publishedGroupId = 'com.mathoperations.arithmetics'
+    libraryName = 'equations'
+    artifact = 'equations'
+
+    libraryDescription = 'Arithmetic Operations.'
+
+    siteUrl = 'https://github.com/saindane99/Operations'
+    gitUrl = 'https://github.com/saindane99/Operations.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'gladiator'
+    developerName = 'Shailesh Saindane'
+    developerEmail = 'shailesh.saindane@sanginfo.com'
+    organization = ''
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
 android {
     compileSdkVersion 27
-
-
-
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 27
@@ -32,3 +53,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+apply from: 'https://raw.githubusercontent.com/saindane99/Operations/master/math-lib/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/saindane99/Operations/master/math-lib/bintrayv1.gradle'
